--- a/runtime/package.json
+++ b/runtime/package.json
@@ -7,7 +7,19 @@
   "author": "Zsolt Varga <hello@hisorange.me>",
   "license": "GPL-3.0",
   "private": false,
+  "scripts": {
+    "dev": "ts-node src/main.ts",
+    "build": "tsc",
+    "start": "node dist/main.js"
+  },
   "dependencies": {
+    "@fastify/http-proxy": "^8.2.2",
+    "fastify": "^4.6.0",
     "workerd": "^1.20220926.3"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.23",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
