--- a/runtime/package.json
+++ b/runtime/package.json
@@ -8,18 +8,32 @@
   "license": "GPL-3.0",
   "private": false,
   "scripts": {
-    "dev": "ts-node src/main.ts",
-    "build": "tsc",
-    "start": "node dist/main.js"
+    "build:server": "tsc -p tsconfig.server.json",
+    "build:admin": "vite build",
+    "dev": "ts-node src/server/main.ts",
+    "prebuild": "rimraf dist",
+    "build": "yarn build:server && yarn build:admin",
+    "start": "NODE_ENV=production node dist/server/main.js"
   },
   "dependencies": {
     "@fastify/http-proxy": "^8.2.2",
+    "@fastify/static": "^6.5.0",
     "fastify": "^4.6.0",
+    "middie": "^7.1.0",
     "workerd": "^1.20220926.3"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
+    "less": "^4.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recoil": "^0.7.5",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.4"
   }
 }
