--- a/runtime/package.json
+++ b/runtime/package.json
@@ -23,15 +23,21 @@
     "workerd": "^1.20220926.3"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "antd": "^4.23.3",
+    "autoprefixer": "^10.4.12",
     "less": "^4.1.3",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "recoil": "^0.7.5",
     "rimraf": "^3.0.2",
+    "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^3.1.4"
