--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.4.0"
+    "@astrojs/tailwind": "^2.0.2",
+    "astro": "^1.4.0",
+    "tailwindcss": "^3.0.24"
   }
 }
