--- a/runtime/package.json
+++ b/runtime/package.json
@@ -32,6 +32,8 @@
     "@vitejs/plugin-react": "^2.1.0",
     "antd": "^4.23.3",
     "autoprefixer": "^10.4.12",
+    "axios": "^0.27.2",
+    "axios-hooks": "^4.0.0",
     "less": "^4.1.3",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
