--- a/www/package.json
+++ b/www/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev": "astro dev --port 3001",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "astro preview --port 3001",
     "astro": "astro"
   },
   "dependencies": {
