--- a/runtime/package.json
+++ b/runtime/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/signale": "^1.4.4",
+    "@uiw/react-textarea-code-editor": "^2.0.3",
     "@vitejs/plugin-react": "^2.1.0",
     "antd": "^4.23.3",
     "autoprefixer": "^10.4.12",
