--- a/runtime/package.json
+++ b/runtime/package.json
@@ -6,21 +6,26 @@
   "repository": "https://github.com/hisorange/opwork",
   "author": "Zsolt Varga <hello@hisorange.me>",
   "license": "GPL-3.0",
+  "type": "module",
   "private": false,
   "scripts": {
     "build:server": "tsc -p tsconfig.json",
     "build:admin": "vite build",
-    "dev": "ts-node src/server/main.ts",
+    "dev": "nodemon -I --exec node --experimental-specifier-resolution=node --loader ts-node/esm --no-warnings src/server/main.ts",
     "prebuild": "rimraf dist",
     "build": "yarn build:server && yarn build:admin",
     "start": "NODE_ENV=production node dist/server/main.js"
   },
   "dependencies": {
     "@fastify/http-proxy": "^8.2.2",
+    "@fastify/middie": "^8.0.0",
+    "@fastify/passport": "^2.2.0",
+    "@fastify/secure-session": "^5.2.0",
     "@fastify/static": "^6.5.0",
+    "@fastify/swagger": "^7.6.1",
     "axios": "^0.27.2",
     "fastify": "^4.6.0",
-    "middie": "^7.1.0",
+    "fastify-http-errors-enhanced": "^4.0.3",
     "reflect-metadata": "^0.1.13",
     "signale": "^1.4.0",
     "sqlite3": "^5.1.1",
@@ -40,6 +45,7 @@
     "autoprefixer": "^10.4.12",
     "axios-hooks": "^4.0.0",
     "less": "^4.1.3",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
